--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "NumBolt – Fast Math for Kids",
+  "name": "NumBolt - Fast Math for Kids",
   "short_name": "NumBolt",
   "description": "Race the clock, solve math problems & power up Volt! 4 game modes, 10 difficulty levels, XP system & daily challenges. The most fun math game for kids ages 6-14.",
-  "start_url": "https://justngobs.github.io/math-saga-game-for-kids/",
-  "id": "https://justngobs.github.io/math-saga-game-for-kids/",
+  "start_url": "https://justngobs.github.io/numbolt/",
+  "id": "https://justngobs.github.io/numbolt/",
   "display": "standalone",
   "display_override": ["standalone", "minimal-ui"],
   "orientation": "portrait",
@@ -12,7 +12,7 @@
   "categories": ["games", "education", "kids"],
   "lang": "en",
   "dir": "ltr",
-  "scope": "https://justngobs.github.io/math-saga-game-for-kids/",
+  "scope": "https://justngobs.github.io/numbolt/",
   "prefer_related_applications": false,
   "icons": [
     { "src": "icons/icon-72.png",  "sizes": "72x72",   "type": "image/png", "purpose": "any" },
@@ -30,21 +30,21 @@
       "sizes": "1080x1920",
       "type": "image/png",
       "form_factor": "narrow",
-      "label": "NumBolt Home – Choose your mode"
+      "label": "NumBolt Home - Choose your mode"
     },
     {
       "src": "screenshots/game.png",
       "sizes": "1080x1920",
       "type": "image/png",
       "form_factor": "narrow",
-      "label": "NumBolt Gameplay – Beat the clock!"
+      "label": "NumBolt Gameplay - Beat the clock!"
     },
     {
       "src": "screenshots/result.png",
       "sizes": "1080x1920",
       "type": "image/png",
       "form_factor": "narrow",
-      "label": "NumBolt Results – Track your XP"
+      "label": "NumBolt Results - Track your XP"
     }
   ],
   "shortcuts": [
@@ -52,7 +52,7 @@
       "name": "Daily Challenge",
       "short_name": "Daily",
       "description": "Jump into today's daily challenge",
-      "url": "https://justngobs.github.io/math-saga-game-for-kids/?daily=1",
+      "url": "https://justngobs.github.io/numbolt/?daily=1",
       "icons": [{ "src": "icons/icon-96.png", "sizes": "96x96" }]
     }
   ],
